--- a/app/templates/app/application_form_success.html
+++ b/app/templates/app/application_form_success.html
@@ -13,7 +13,7 @@
             <h2 class="text-center mb-4">登録が完了しました</h2>
             <p>おすすめスポットが登録されました。</p>
             <a href="{% url 'home' %}">ホームに戻る</a>
-            <a href="{% url 'add_spot' %}">おすすめスポットを追加する</a>
+            <a href="{% url 'add_spot' applicant_id=applicant_id %}">おすすめスポットを追加する</a>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
