--- a/app/templates/app/application.html
+++ b/app/templates/app/application.html
@@ -13,14 +13,15 @@
             <h1 class="text-center mb-4">観光協会申請</h1>
             <!-- フォームの送信時にエラーがある場合に表示 -->
             {% if form.errors %}
-            <div class="alert alert-danger">
-                <ul>
-                    {% for field, errors in form.errors.items %}
-                        <li>{{ field }}: {{ errors|join:", " }}</li>
+                <div class="form-errors">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
                     {% endfor %}
-                </ul>
-            </div>
+                </div>
             {% endif %}
+
 
             <form method="post"  enctype="multipart/form-data">
                 {% csrf_token %}
