--- a/app/templates/app/application_complete.html
+++ b/app/templates/app/application_complete.html
@@ -10,8 +10,8 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-4 mt-5"> <!-- mt-5 でフォーム全体を下に下げる -->
-            <h2 class="text-center mb-4">申請が完了しました</h2>
-            <p>申請内容が正常に送信されました。管理者が確認し、結果をお知らせします。</p>
+            <h2 class="text-center mb-4">申請が完了しました！</h2>
+            <p>管理者が確認し、結果をお知らせします。</p>
             <a href="{% url 'home' %}">ホームに戻る</a>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
