--- a/app/templates/app/application_form_confirmation.html
+++ b/app/templates/app/application_form_confirmation.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-4 mt-5"> <!-- mt-5 でフォーム全体を下に下げる -->
-            <form action="{% url 'add_spot_confirmation' %}" method="post">
+            <form action="{% url 'add_spot_confirmation' applicant_id=applicant_id %}" method="post">
                 {% csrf_token %}
             
                 <!-- 確認表示用：フィールドの内容を表示する -->
@@ -32,7 +32,7 @@
     {{ form.notes.as_hidden }}
             
     <button type="submit" class="btn btn-success">登録する</button>
-    <a href="{% url 'add_spot' %}">戻る</a>
+    <a href="{% url 'add_spot' applicant_id=applicant_id %}">戻る</a>
 </form>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
