--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -315,7 +315,7 @@ input[type=checkbox]:checked ~ #overlay-button:hover span, input[type=checkbox]:
         <div id="overlay">
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
