--- a/app/templates/app/signup.html
+++ b/app/templates/app/signup.html
@@ -59,19 +59,24 @@
         }
 
         input:focus {
-            border-color: #0984e3;
+            border-color: #b9b9b9;
             background-color: #fff;
             outline: none;
             box-shadow: 0 0 5px rgba(9, 132, 227, 0.3);
         }
 
+        .button-container {
+            text-align: center;  /* ボタンを中央寄せ */
+            width: 100%;  /* 親要素の幅を100%に設定 */
+        }
+
         button {
-            width: 80%;  /* ボタンの幅を100%に設定 */
+            width: 80%;  /* ボタンの幅を80%に設定 */
             padding: 10px;  /* ボタンのパディングを減らす */
             font-size: 14px; /* フォントサイズを少し小さく */
             font-weight: bold;
             color: #fff;
-            background-color: #0984e3;
+            background-color: #696969;
             border: none;
             border-radius: 6px;
             cursor: pointer;
@@ -79,7 +84,7 @@
         }
 
         button:hover {
-            background-color: #74b9ff;
+            background-color: #929292;
         }
 
         .text-center {
@@ -88,13 +93,13 @@
         }
 
         .text-center a {
-            color: #0984e3;
+            color: #000000;
             text-decoration: none;
             transition: color 0.3s ease;
         }
 
         .text-center a:hover {
-            color: #74b9ff;
+            color: #b7b7b7;
         }
 
         /* エラーメッセージのスタイル */
@@ -154,8 +159,12 @@
             <label for="password2">パスワード確認</label>
             <input type="password" id="password2" name="password2" required>
         </div>
-        <button type="submit">登録</button>
+
+        <div class="button-container">
+            <button type="submit">登録</button>
+        </div>
     </form>
+
     <div class="text-center">
         <a href="{% url 'login' %}">既にアカウントをお持ちですか？ログイン</a>
     </div>
