--- a/app/templates/app/share.html
+++ b/app/templates/app/share.html
@@ -1,5 +1,7 @@
 {% extends "base/base.html" %}
 {% load static %}
+
+
    
 {% block body %}
 <!-- メッセージの表示部分 -->
@@ -13,7 +15,7 @@
     </div>
 {% endif %}
 
-<form method="post"  enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data" class="margin-top">
     {% csrf_token %}
     <div class="form-group">
         <label for="email">共有したい人のメールアドレスを入力してください</label>
@@ -21,4 +23,12 @@
     </div>
     <button type="submit" class="btn btn-primary btn-block">送信</button>
 </form>
+
+
+<style>
+    .margin-top{
+        margin-top:120px;
+    }
+</style>
 {% endblock %}
+
