--- a/app/templates/app/bookmark_edit.html
+++ b/app/templates/app/bookmark_edit.html
@@ -35,7 +35,7 @@
             box-sizing: border-box; /* 余白を含めたサイズ計算 */
         }
         button {
-            background-color: #007BFF;
+            background-color: #464646;
             color: white;
             padding: 10px;
             border: none;
