--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -250,8 +250,8 @@ input[type=checkbox]:checked ~ #overlay-button:hover span, input[type=checkbox]:
         <div id="overlay">
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'logout' %}">logout</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+                <li><a href="{% url 'application' %}">Contact</a></li>
             </ul>
         </div>
          
