--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -65,7 +65,7 @@ img {
     margin-top: 20px;
     padding: 10px 15px;
     font-size: 16px;
-    background-color: #28a745;
+    background-color: #888;
     color: white;
     border: none;
     border-radius: 4px;
@@ -74,5 +74,5 @@ img {
 }
 
 .submit-button:hover {
-    background-color: #218838; /* ホバー時の色 */
+    background-color: #888; /* ホバー時の色 */
 }
