--- a/app/templates/app/schedule_form.html
+++ b/app/templates/app/schedule_form.html
@@ -1,16 +1,93 @@
 {% extends "base/base.html" %}
 {% load static %}
-   
+
 {% block extra_styles %}
-<link rel="stylesheet" href="{% static 'app/css/schedule.css' %}">
+<style>
+    body {
+        font-family: 'Arial', sans-serif;
+        background-color: #f9f9f9;
+        margin: 0;
+        padding: 0;
+    }
+
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        padding: 20px;
+        box-sizing: border-box;
+        margin-top: 70px;
+    }
+
+    h2 {
+        margin-bottom: 20px;
+        font-size: 24px;
+        color: #333333;
+        text-align: center;
+    }
+
+    form {
+        background-color: #ffffff;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 400px;
+    }
+
+    form p {
+        margin-bottom: 15px;
+    }
+
+    form label {
+        font-weight: bold;
+        margin-bottom: 5px;
+        display: block;
+    }
+
+    form input, form select, form textarea {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 15px;
+        border: 1px solid #ced4da;
+        border-radius: 5px;
+        font-size: 14px;
+    }
+
+    button[type="submit"] {
+        width: 100%;
+        padding: 10px;
+        background-color: #505050;
+        color: #ffffff;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    button[type="submit"]:hover {
+        background-color: #898989;
+        transform: translateY(-2px);
+    }
+
+    button[type="submit"]:active {
+        transform: translateY(0);
+    }
+    
+</style>
 {% endblock %}
 
 {% block body %}
-<h2>新しいスケジュールを追加</h2>
+<div class="form-container">
+    <h2>新しいスケジュールを追加</h2>
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}  <!-- Djangoのフォームを自動生成して表示 -->
-    <button type="submit">追加</button>
-</form>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}  <!-- Djangoのフォームを自動生成して表示 -->
+        <button type="submit">追加</button>
+    </form>
+</div>
 {% endblock %}
