google map apiの基礎を実装

--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -238,7 +238,7 @@ input[type=checkbox]:checked ~ #overlay-button:hover span, input[type=checkbox]:
             <!-- 右側のリンク -->
             <div class="nav-links">
               <a href="{% url 'checklist' plan.id|default:1 %}" class="tab3">チェックリスト</a>
-              <a href="#" class="tab4">マップ</a>
+              <a href="{% url 'map' plan.id|default:1 %}" class="tab4">マップ</a>
           </div>
         </nav>
         
