--- a/app/static/app/css/schedule.css
+++ b/app/static/app/css/schedule.css
@@ -10,6 +10,7 @@ body {
     margin: 60px auto;
     padding: 20px;
     max-width: 800px;
+    margin:120px auto;
     background-color: #ffffff; /* 白背景 */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 軽い影 */
     border-radius: 8px;
